fix styling issues on mobile for whitfield family page

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@
 
 * {
     color: var(--main-text-light);
+    box-sizing: border-box;
 }
 
 html,
